# wumTTS

./: CMakeLists.txt  README.md
hacklib/include/: ExeFile.h
hacklib/src/: Memory_WIN32.cpp
lib/minhook-1.3.3/: CMakeLists.txt
release/: wumTTS.ini
src/: GameChat.cpp  GameChat.h  Hooks.cpp  Hooks.h  Speaker.h  dllmain.cpp
